Generics_Extend_WildCard_CaptureConversion/Code2_error_report.txt
javac errors for Code2.java 
Code2.java:12: error: incompatible types: Code2<InputStream> cannot be converted to Code2<? extends Serializable>
        Code2<? extends Serializable> ce=new Code2<InputStream>();
                                         ^
1 error
 
============================================================================= 
ExtendJ errors for Code2.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard_CaptureConversion\Code2.java:12: error: type argument 1 is of type ? extends Serializable which is not within the bounds of type parameter E (E extends InputStream)
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard_CaptureConversion\Code2.java:12: error: cannot assign variable ce of type Code2<? extends Serializable> a value of type Code2<java.io.InputStream>
 
============================================================================= 
Eclipse ECJ errors for Code2.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard_CaptureConversion\Code2.java (at line 12)
	Code2<? extends Serializable> ce=new Code2<InputStream>();
	                                 ^^^^^^^^^^^^^^^^^^^^^^^^
Type mismatch: cannot convert from Code2<InputStream> to Code2<? extends Serializable>
----------
1 problem (1 error)
